--- a/partials/custom.scss
+++ b/partials/custom.scss
@@ -1,17 +1,24 @@
 /*-- scss:defaults --*/
 
+$indigo: #520b92ff;
+$office-green: #008000ff;
+$engineering-orange: #d00000ff;
+$selective-yellow: #ffba08ff;
+$steel-blue: #3f88c5ff;
+
 // colors
-$presentation-heading-color: #520b92;
+$presentation-heading-color: $indigo;
 $code-block-font-size: 0.65em;
-$link-color: #008000;
+$link-color: $office-green;
 $link-color-hover: $link-color;
-$selection-bg: #BAD6FB;
-$selection-color: inheirt;
+$selection-bg: $steel-blue;
+
+$presentation-font-size-root: 52px;
 
 /*-- scss:rules --*/
 
 .reveal {
-    border-top: 4px #520b92 solid;
+    border-top: 4px $indigo solid;
 
     a:hover {
         text-decoration: underline;
@@ -39,25 +46,40 @@ $selection-color: inheirt;
     }
 
     .header-slide {
-        .author {
-            font-size: 1.2em;
+        h2 {
+            text-align: center;
+            font-size: 1.6em;
+            margin-bottom: 0.25em;
         }
 
-        .icon,
         .social-media {
-            font-size: 0.9em;
-            color: $body-color;
+            .author {
+                font-size: 1.2em;
 
-            &:hover {
-                color: $link-color;
-                text-decoration: none;
+                p {
+                    line-height: 1em;
+                }
+            }
+
+            .fa-brands,
+            .author-link {
+                color: $body-color;
+
+                &:hover {
+                    color: $link-color;
+                    text-decoration: none;
+                }
+            }
+
+            .talk-link {
+                font-style: italic;
             }
         }
 
-        .talk-link {
-            font-size: 0.8em;
-            font-style: italic;
-        }
+    }
+
+    .text-align-center {
+        text-align: center;
     }
 
 }
@@ -70,8 +92,9 @@ $selection-color: inheirt;
     background-size: cover;
     display: inline-block;
     height: 32px;
-    transform: scale(1.2) translateY(4px);
-    margin-right: 8px;
+    transform: scale(2) translateY(4px);
+    margin-right: 0.5em;
+    margin-left: 0.5em;
 }
 
 .fa-mastodon {
@@ -84,7 +107,7 @@ $selection-color: inheirt;
 }
 
 .fa-twitter {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3C!--! Font Awesome Free 6.2.1 by %40fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0  Fonts: SIL OFL 1.1  Code: MIT License) Copyright 2022 Fonticons  Inc. --%3E%3Cpath d='M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z'/%3E%3C/svg%3E");
+    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"/></svg>');
     width: 32px;
 
     &:hover {
